aws-migration/le-migration/11-argocd/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
    project: linkedeye
    environment: prod
